test/langtools/tools/javac/annotations/typeAnnotations/failures/AnnotatedMethodSelectorTest.out
AnnotatedMethodSelectorTest.java:15:19: compiler.err.annotation.type.not.applicable.to.type: AnnotatedMethodSelectorTest.A
1 error
